--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,4 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import 'partials/_variables.scss';
+@import 'partials/_mixin.scss';
+@import 'partials/_common.scss';
+@import 'partials/_header.scss';
