--- a/src/partials/_common.scss
+++ b/src/partials/_common.scss
@@ -1,3 +1,8 @@
-.disk_container{
- @include disk_container;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  background-color: red;
 }
