--- a/src/partials/_common.scss
+++ b/src/partials/_common.scss
@@ -3,10 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-.poster{
-  width: 200px;
-  height: 200px;
-}
+
 .flex{
   display: flex;
   justify-content: center;
@@ -15,4 +12,5 @@
 }
 body{
   background-color: red;
+  color: white;
 }
