--- a/src/partials/_mixin.scss
+++ b/src/partials/_mixin.scss
@@ -1,5 +1,5 @@
 @mixin disk_container{
-  height: 300px;
+  height: 330px;
   width: 250px;
-  background-color: black
+  background-color: black;
 }
