--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -1,8 +1,12 @@
 .disk_container{
  @include disk_container;
  margin: 20px 20px 20px 0;
+ font-size: 13px;
+ padding-top: 25px;
+ text-align: center;
 }
 .poster{
   width: 200px;
   height: 200px;
+  margin-bottom: 15px;
 }
