--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -30,8 +30,7 @@
     padding-top: 25px;
     text-align: center;
     .poster{
-      width: 200px;
-      height: 200px;
+      width: 80%;
       margin-bottom: 15px;
     }
     .author{
