--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -7,6 +7,7 @@
     margin: 20px 20px 20px 0;
     font-size: 14px;
     padding-top: 25px;
+    padding-bottom: 5px;
     text-align: center;
     .poster{
       width: 80%;
